--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <h3>Latest News</h3>
 		<h6>CALIFORNIA</h6>
         <p> Cities and towns in the state were told to cut water use by 25 percent</p>
-        <h5>The Colorado River Basin, which supplies water to Phoenix, Las Vegas, Los Angeles, and San Diego, has also been in a drought for more than a decade, and the river basin’s aquifers have been declining too.</h5>
+        <h5>The Colorado River Basin, which supplies water to Phoenix, Las Vegas, Los Angeles, and San Diego, has also been in a drought for more than a decade, and the river basinâ€™s aquifers have been declining too.</h5>
         <p>Once aquifers are depleted, the state will have no backup supplies to surface water. Desalination could make up some of the difference, but can be expensive and is energy-intensive.<br /></p>
         <p></p>
         <h3>Useful Links</h3>
@@ -44,6 +44,7 @@
           <li><a href="#">link 2</a></li>
           <li><a href="#">link 3</a></li>
           <li><a href="#">link 4</a></li>
+		<li><a href="http://localhost:8890/notebooks/banjir/banjir.ipynb">link to work</a></li>	
         </ul>
         
       </div>
