--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
           <li><a href="#">link 2</a></li>
           <li><a href="#">link 3</a></li>
           <li><a href="#">link 4</a></li>
-		<li><a href="http://localhost:8890/notebooks/banjir/banjir.ipynb">link to work</a></li>	
+		<li><a href="http://localhost:8890/notebooks/banjir/banjir.ipynb">link5</a></li>	
         </ul>
         
       </div>
